Preentrega2 modificación index

--- a/index.html
+++ b/index.html
@@ -26,11 +26,13 @@
     <h1>Inicio</h1>
     <section class="mainSection">
       <h3>Nuestra historia</h3>
-      <p>Farmacia Noble surge en agosto de 1990 como un sueño familiar. Atendida desde sus orígenes por Bernardo y Bianca Noble, ambos profesionales farmacéuticos, crecimos tanto en el rubro farmacéutico como en el area de salud y belleza, ganando la confianza y el cariño de nuestros clientes, que siempre vuelven en busca de consejos y sugerencias.</p>
+      <p>Farmacia Noble surge en agosto de 1990 como un sueño familiar.</p> 
+      <p>Atendida desde sus orígenes por Bernardo y Bianca Noble, ambos profesionales farmacéuticos, crecimos tanto en el rubro farmacéutico como en el area de salud y belleza, ganando la confianza y el cariño de nuestros clientes, que siempre vuelven en busca de consejos y sugerencias.</p>
     </section>
     <section class="mainSection">
       <h3>Nuestra misión</h3>
-      <p>Desde el inicio, nuestra misión es brindar un servicio de calidad orientada a nuestros clientes, con la premisa de que la satisfacción de nuestros clientes es lo primero. Es a ellos a quien abocamos nuestra dedicación y brindamos servicios y productos de calidad. </p>
+      <p>Desde el inicio, nuestra misión es brindar un servicio de calidad orientada a nuestros clientes, con la premisa de que la satisfacción de nuestros clientes es lo primero.</p>
+      <p>Es a ellos a quien abocamos nuestra dedicación y brindamos servicios y productos de calidad. </p>
     </section>
     <section class="mainSection">
       <h3>Nuestro staff</h3>
