--- a/pages/noticias.html
+++ b/pages/noticias.html
@@ -4,61 +4,101 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=<device-width>, initial-scale=1.0">
   <script src="https://kit.fontawesome.com/784ed09b1e.js" crossorigin="anonymous"></script>
-  <title>Farmacia </title>
+  <title>Farmacia Noble</title>
   <link rel="shortcut icon" href="../favicon.ico" type="image/x-icon">
+  <link rel="stylesheet" href="../css/bootstrap.min.css">
   <link rel="stylesheet" href="../css/styles.css">
 </head>
 <body>
-  <header>
-    <img src="../assets/img/logo.svg" alt="Logo Farmacia">
-    <nav">
-      <ul>
-        <li class="liNav"><a href="../index.html">Inicio</a></li>
-        <li class="liNav"><a href="./medicamentos.html">Comprar receta</a></li>
-        <li class="liNav"><a href="./tienda.html">Tienda</a></li>
-        <li class="liNav"><a href="./noticias.html">Noticias</a></li>
-        <li class="liNav"><a href="./contacto.html">Contacto</a></li>
-      </ul>
+  <header class="header position-sticky top-0">
+    <nav>
+      <div class="container text-center">
+        <div class="row">
+          <div class="col">
+            <a class="navbar-brand" href="../index.html">
+              <img class="logo" src="../assets/img/logo.svg" alt="Logo Farmacia Noble" width="100" height="48">
+            </a>
+          </div>
+          <div class="col">
+            <ul class="nav nav-pills nav-fill">
+              <li class="nav-item">
+                <a class="nav-link" href="../index.html">Inicio</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="./medicamentos.html">Comprar receta</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="./tienda.html">Tienda</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link active" aria-current="page" href="./noticias.html">Noticias</a>
+              </li><li class="nav-item">
+                <a class="nav-link" href="./contacto.html">Contacto</a>
+              </li>
+            </ul>
+          </div>
+        </div>
+      </div>
     </nav>
   </header>
   <main>
-    <h1>Noticias</h1>
-    <h2>Te mostramos cómo elegir la fragancia adecuada para vos</h2>
-    <iframe width="560" height="315" src="https://www.youtube.com/embed/e-SXF_Cc5Cs?si=DMUCQBKkhrgUjUwG" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
-    <h2>Qué diferencias hay entre un protector y un bloqueador solar</h2>
-    <img src="../assets/img/Noticias/bloqueadorVsProtector.png" alt="Imagen explicativa de las diferencias entre un bloqueador solar y un protector solar">
-    <!--Agregar imagen-->
-    <p><a href="https://www.clarin.com/internacional/cuidado-piel-verano-diferencias-protector-bloqueador-solar_0_Ksyf9U9NlA.html" target="_blanck">Leer más...</a></p>
-    <h2>Medicamentos sin TACC</h2>
-    <img src="../assets/img/Noticias/medicamentos_sin_tacc.jpeg" alt="Imagen medicamentos con el símbolo Sin TACC">
-    <!--Agregar imagen-->
-    <p><a href="https://www.colfacor.org.ar/images/capacitacion/alimentos_libres_gluten/ACAmedicamentos_listado.pdf" target="_blank">Te compartimos esta lista de medicamentos aptos para celíacos</a>
-    </p>
+    <h1 class="text-center pt-2 pb-2 fs-2 fw-bold">Noticias</h1>
+    <div class="noticias d-inline-flex justify-content-between align-items-center">
+      <div class="p-2">
+        <div class="card-body m-3 border border-1 rounded-bottom shadow p-3 justify-content-cente">
+          <h5 class="card-title fw-bold pt-2 pb-2">Te mostramos cómo elegir la fragancia adecuada para vos</h5>
+          <iframe width="350" height="300" src="https://www.youtube.com/embed/e-SXF_Cc5Cs?si=DMUCQBKkhrgUjUwG" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+        </div>
+      </div>
+      <div class="p-2">
+        <div class="card-body m-3 border border-1 rounded-bottom shadow p-3 justify-content-center">
+          <h5 class="card-title fw-bold pt-2 pb-2">Medicamentos sin TACC</h5> 
+          <img src="../assets/img/Noticias/medicamentos_sin_tacc.jpeg" width="350" height="300" alt="Imagen medicamentos con el símbolo Sin TACC">
+          <p class="pt-3"><a href="https://www.colfacor.org.ar/images/capacitacion/alimentos_libres_gluten/ACAmedicamentos_listado.pdf"  target="_blank">Leer más...</a></p> 
+        </div>
+      </div>
+      <div class="p-2">
+        <div class="card-body m-3 border border-1 rounded-bottom shadow p-3 justify-content-center" >
+          <h5 class="card-title fw-bold pt-2 pb-2">¿Qué diferencias hay entre un protector y un bloqueador solar?</h5>
+          <img width="350" height="300" src="../assets/img/Noticias/bloqueadorVsProtector.png" alt="Imagen explicativa de las diferencias entre un bloqueador solar y un protector solar">
+          <p class="pt-3"><a href="https://www.clarin.com/internacional/cuidado-piel-verano-diferencias-protector-bloqueador-solar_0_Ksyf9U9NlA.html" target="_blanck">Leer más...</a></p>            
+        </div>
+      </div>      
+    </div>
    </main>
-   <footer>
-    <section>
-      <h4>Ubicación</h4>
-      <p>Av. Corrientes 1801, CABA</p>
-      <iframe class="location" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3283.9965271887577!2d-58.39455833132518!3d-34.60424932545177!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95bccac198206de7%3A0x31a4c79ffb528624!2sAv.%20Corrientes%20%26%20Av.%20Callao%2C%20C1042%20Buenos%20Aires!5e0!3m2!1ses-419!2sar!4v1707269433509!5m2!1ses-419!2sar" width="400" height="300" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
-    </section>
-    <section><h4>Seguinos en nuestras redes sociales</h4>
-      <a href="https://www.facebook.com/" target="_blank">
-        <i class="fa-brands fa-facebook-f"></i>
-      </a>
-      <a href="https://www.instagram.com/" target="_blank">
-        <i class="fa-brands fa-instagram"></i>
-      </a>
-      <a href="https://www.tiktok.com/" target="_blank">
-        <i class="fa-brands fa-tiktok"></i>
-      </a>
-      <a href="https://twitter.com/" target="_blank">
-        <i class="fa-brands fa-x-twitter"></i>
-      </a>
-      <a href="https://www.whatsapp.com/" target="_blank">
-        <i class="fa-brands fa-whatsapp"></i>
-      </a>
-    </section>
-     <p>Todos los derechos reservados - 2024</p>
+   <footer class="container-fluid text-center">
+    <div class="row row-cols-3">
+      <div class="col pt-4">
+        <h4 class="text-decoration-underline">Ubicación</h4>
+          <p>Av. Corrientes 1801, CABA</p>
+          <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3283.9965271887577!2d-58.39455833132518!3d-34.60424932545177!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95bccac198206de7%3A0x31a4c79ffb528624!2sAv.%20Corrientes%20%26%20Av.%20Callao%2C%20C1042%20Buenos%20Aires!5e0!3m2!1ses-419!2sar!4v1707269433509!5m2!1ses-419!2sar" width="200" height="150" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+      </div>
+      <div class="col pt-4">
+        <h4 class="text-decoration-underline ms-1">Contacto</h4>
+        <p>011-5555-1234</p>
+        <p>contacto@farmacianoble.com.ar</p>
+      </div>
+      <div class="col pt-4">
+        <h4 class="text-decoration-underline ms-1">Seguinos en nuestras redes sociales</h4>
+          <a href="https://www.facebook.com/" target="_blank">
+           <i class="icon fa-brands fa-facebook-f fs-3 pe-4"></i>
+          </a>
+          <a href="https://www.instagram.com/" target="_blank">
+            <i class="icon fa-brands fa-instagram fs-3 pe-4"></i>
+          </a>
+          <a href="https://www.tiktok.com/" target="_blank">
+            <i class="icon fa-brands fa-tiktok fs-3 pe-4"></i>
+          </a>
+          <a href="https://twitter.com/" target="_blank">
+            <i class="icon fa-brands fa-x-twitter fs-3 pe-4"></i>
+          </a>
+          <a href="https://www.whatsapp.com/" target="_blank">
+            <i class="icon fa-brands fa-whatsapp fs-3 pe-4"></i>
+          </a>
+      </div>
+    </div>
+    <p>Todos los derechos reservados - 2024</p>
   </footer>
+  <script src="../js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
