--- a/pages/noticias.html
+++ b/pages/noticias.html
@@ -11,7 +11,7 @@
 </head>
 <body>
   <header class="header position-sticky top-0">
-    <nav class="navbar navbar-expand-lg">
+    <nav class="navbar navbar-expand-lg" style="background-color: rgb(184, 217, 252);">
       <div class="container-fluid">
         <a class="navbar-brand" href="#">
           <img src="../assets/img/logo.svg" alt="Logo Farmacia Noble" width="100" height="48">
