--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -13,7 +13,7 @@
   <header class="header position-sticky top-0">
     <nav class="navbar navbar-expand-lg" style="background-color: rgb(184, 217, 252);">
       <div class="container-fluid">
-        <a class="navbar-brand" href="#">
+        <a class="navbar-brand" href="../index.html">
           <img src="../assets/img/logo.svg" alt="Logo Farmacia Noble" width="100" height="48">
         </a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
@@ -45,12 +45,12 @@
     </nav>
   </header>
   <main>
-    <h1 class="text-center pt-2 pb-2 fs-2 fw-bold">Contacto</h1>
+    <h1 class="text-center pt-2 pb-2 fs-2 fw-bold" style="background-color:rgba(126, 205, 15, 0.5)">Contacto</h1>
     <div class="text-center contactForm">
       <h4>Nos interesa conocer cómo fue tu experiencia en Farmacia Noble</h4>
       <h4>Podés dejarnos tu consulta, sugerencia o reclamo a través de nuestro formulario.</h4> 
       <h4>Nuestro tiempo de respuesta es de 24 hs.</h4>
-      <h5 class=""mx-auto">Nunca compartiremos su información con terceros.</h5>
+      <h5 class=""mx-auto">Nunca compartiremos tu información con terceros.</h5>
     </div>
     <div class="mx-auto p-2" style="width: 800px;";>
       <form action="" class="class">
@@ -78,92 +78,42 @@
           <input type="submit" class="sendButton w-50 btn btn-primary bgBoton" id="enviar" name="enviar" value="Enviar">
         </div>        
       </form>
-    </div>
-    
-
-
-    <!--<div class="mt-5 mb-5 row justify-content-center justify-content-md-between align-items-center align-items-md-stretch">
-      <div class="col-12 col-md-6  justify-content-center">
-          <form action="">
-              <div class="mb-3">
-                  <input type="text" placeholder="Ingrese su nombre y apellido" class="form-control" id="name" name="name">
-              </div>
-              <div class="mb-3">
-                  <select class="form-select" aria-label="Default select example">
-                      <option selected>Indique el motivo de contacto:</option>
-                      <option value="1">Consulta</option>
-                      <option value="2">Reclamo</option>
-                      <option value="3">Sugerencia</option>
-                    </select>
-              </div>
-              <div class="mb-3">
-                  <input type="email" class="form-control" id="email" name="email" placeholder="ejemplo@servidor.com">
-              </div>
-              <div class="mb-3">
-                  <input type="tel" class="form-control" id="tel" name="tel" placeholder="(011)15-1234-5678">
-              </div>
-              <div class="mb-3">
-                 <textarea class="form-control" id="comentario" name="Ingrese su sugerencia o reclamo..." rows="3">...</textarea>
-              </div>
-              <div class="text-center">
-                  <input type="submit" class=" w-50 btn btn-primary bgBoton" id="enviar" name="enviar" value="Enviar">
-              </div>
-          </form>
-      </div>
-    -->
-
-
-
-    
+    </div>   
   </main>
   <footer class="container-fluid text-center">
-    <div class="row row-cols-3">
-      <div class="col pt-4">
-        <h4 class="text-decoration-underline">Ubicación</h4>
-          <p>Av. Corrientes 1801, CABA</p>
+    <div class="row">
+      <div class="col 12 col-lg-4 pt-2">
+        <h5 class="text-decoration-underline pt-2">Ubicación</h5>
+          <p class="pt-2">Av. Corrientes 1801, CABA</p>
           <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3283.9965271887577!2d-58.39455833132518!3d-34.60424932545177!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95bccac198206de7%3A0x31a4c79ffb528624!2sAv.%20Corrientes%20%26%20Av.%20Callao%2C%20C1042%20Buenos%20Aires!5e0!3m2!1ses-419!2sar!4v1707269433509!5m2!1ses-419!2sar" width="200" height="150" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
       </div>
-      <div class="col pt-4">
-        <h4 class="text-decoration-underline ms-1">Contacto</h4>
-        <p>011-5555-1234</p>
-        <p>contacto@farmacianoble.com.ar</p>
+      <div class="col 12 col-lg-4 pt-2">
+        <h5 class="text-decoration-underline ms-1 pt-2">Contacto</h5>
+        <p class="pt-2">011-5555-1234</p>
+        <p class="pt-2">contacto@farmacianoble.com.ar</p>
       </div>
-      <div class="col pt-4">
-        <h4 class="text-decoration-underline ms-1">Seguinos en nuestras redes sociales</h4>
-          <a href="https://www.facebook.com/" target="_blank">
-            <span>
-              <a href="https://www.facebook.com/" target="_blank"><i class="icon fa-brands fa-facebook-f fs-3 pe-4"></i></a>
-            </span>
-            <span>
-              <a href="https://www.instagram.com/" target="_blank"><i class="icon fa-brands fa-instagram fs-3 pe-4"></i></a>
-            </span>
-            <span>
-              <a href="https://www.tiktok.com/" target="_blank"><i class="icon fa-brands fa-tiktok fs-3 pe-4"></i></a>
-            </span>
-            <span>
-              <a href="https://twitter.com/" target="_blank"><i class="icon fa-brands fa-x-twitter fs-3 pe-4"></i></a>
-            </span>
-            <span>
-              <a href="https://www.whatsapp.com/" target="_blank"><i class="icon fa-brands fa-whatsapp fs-3 pe-4"></i></a>
-            </span><i class="icon fa-brands fa-facebook-f fs-3 pe-4"></i>
-          </a>
-          <a href="https://www.instagram.com/" target="_blank">
-            <i class="icon fa-brands fa-instagram fs-3 pe-4"></i>
-          </a>
-          <a href="https://www.tiktok.com/" target="_blank">
-            <i class="icon fa-brands fa-tiktok fs-3 pe-4"></i>
-          </a>
-          <a href="https://twitter.com/" target="_blank">
-            <i class="icon fa-brands fa-x-twitter fs-3 pe-4"></i>
-          </a>
-          <a href="https://www.whatsapp.com/" target="_blank">
-            <i class="icon fa-brands fa-whatsapp fs-3 pe-4"></i>
-          </a>
+      <div class="col 12 col-lg-4 pt-2">
+        <h5 class="text-decoration-underline ms-1 pt-2">Seguinos en nuestras redes sociales</h5>
+        <span>
+          <a href="https://www.facebook.com/" target="_blank"><i class="icon fa-brands fa-facebook-f fs-3 pe-4 pt-2"></i></a>
+        </span>
+        <span>
+          <a href="https://www.instagram.com/" target="_blank"><i class="icon fa-brands fa-instagram fs-3 pe-4 pt-2"></i></a>
+        </span>
+        <span>
+          <a href="https://www.tiktok.com/" target="_blank"><i class="icon fa-brands fa-tiktok fs-3 pe-4 pt-2"></i></a>
+        </span>
+        <span>
+          <a href="https://twitter.com/" target="_blank"><i class="icon fa-brands fa-x-twitter fs-3 pe-4 pt-2"></i></a>
+        </span>
+        <span>
+          <a href="https://www.whatsapp.com/" target="_blank"><i class="icon fa-brands fa-whatsapp fs-3 pe-4 pt-2"></i></a>
+        </span>
       </div>
     </div>
-    <p>Todos los derechos reservados - 2024</p>
+    <p class="pt-2">Todos los derechos reservados - 2024</p>
   </footer>
-  <script src="../js/bootstrap.bundle.min.js"></script>
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+  <script src="./js/bootstrap.bundle.min.js""></script>
+  <script src="./js/bootstrap.bundle.min.js""></script>
 </body>
 </html>
