--- a/pages/medicamentos.html
+++ b/pages/medicamentos.html
@@ -13,7 +13,7 @@
   <header class="header position-sticky top-0">
     <nav class="navbar navbar-expand-lg" style="background-color: rgb(184, 217, 252);">
       <div class="container-fluid">
-        <a class="navbar-brand" href="#">
+        <a class="navbar-brand" href="../index.html">
           <img src="../assets/img/logo.svg" alt="Logo Farmacia Noble" width="100" height="48">
         </a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
@@ -45,76 +45,80 @@
     </nav>
   </header>
   <main>
-    <h1 class="text-center pt-2 pb-2 fs-2 fw-bold">Comprar receta</h1>
-    <h3 class="text-center ps-2">Podés enviarnos tu receta  digital o en papel.</h3>
-    <h3 class="text-center ps-2">Las recetas y bonos en formato papel deberán ser entregados al momento de recibir el producto</h3>
-    <h4 class="text-start ps-4">Para canjear una receta siga los siguientes tres simples pasos:</h4>
-    <div class="row g-0 text-center">
-  <div class="col-sm-6 col-md-8 text-start ps-4">
-    <ol class="text-start">
-      <li>Verifique que trabajamos su <a href="#cobMed">cobertura médica</a> o <a href="bonoDesc">bono de descuento</a> haciendo click en los enlaces correspondientes.</li>
-      <li>Los pedidos realizados de 9 a 13, se envían o retiran a partir de las 14hs. 
-        El envío o retiro se coordina por Whatsapp. 
-        Si desea recibir el pedido en su domicilio, verifique nuestra zona de cobertura:</li>
-        <iframe class="position-center pt-2" src="https://www.google.com/maps/d/u/0/embed?mid=1zMrpd11MKDvt1yL2sNnnGMmre0uNdcw&ehbc=2E312F" width="300" height="300"></iframe>
-      <li>Para enviar tu receta hacé <a href="https://www.whatsapp.com/" target="_blank">click aquí</a></li>
-    </ol>
-  </div>
-  <div class="col-6 col-md-4 text-center">
-    <h5 class="cobMed text-decoration-underline" >Coberturas médicas</h5>
-    <ul>
-      <li class="list-group-item">Accord Salud</li>
-      <li class="list-group-item">Galeno</li>
-      <li class="list-group-item">Medicus</li>
-      <li class="list-group-item">Omint</li>
-      <li class="list-group-item">Osde</li>
-      <li class="list-group-item">Swiss Medical</li>
-    </ul>
-    <h5 class="bonoDesc text-decoration-underline">Bonos de descuento</h5>
-    <ul>
-      <li class="list-group-item">Andrómaco</li>
-      <li class="list-group-item">Cassará</li>
-      <li class="list-group-item">Fortbenton</li>
-      <li class="list-group-item">Panalab</li>
-      <li class="list-group-item">PAP</li>
-    </ul>
-   
-  </div>
+    <h1 class="text-center pt-2 pb-2 fs-2 fw-bold" style="background-color:rgba(126, 205, 15, 0.5)">Comprar receta</h1>
+    <h4 class="text-center">Podés enviarnos tu receta  digital o en papel.</h4>
+    <h4 class="text-center">Las recetas y bonos en formato papel deberán ser entregados al momento de recibir el producto.</h4>
+    <h4 class="text-start ps-5">Para canjear una receta seguí los siguientes tres simples pasos:</h4>
+    <div class="row">
+      <div class="col-12 col-lg-1"></div>
+      <div class="col-12 col-lg-6 text-start">
+        <ol class="listaOrdenada text-start ps-5">
+          <li class="fs-5">Verifique que trabajamos su <a href="#cobMed">cobertura médica</a> o <a href="bonoDesc">bono de descuento</a> haciendo click en los enlaces correspondientes.</li>
+          <li class="fs-5">Los pedidos realizados de 9 a 13, se envían o retiran a partir de las 14hs. 
+            El envío o retiro se coordina por Whatsapp. 
+            Si desea recibir el pedido en su domicilio, verifique nuestra zona de cobertura:</li>
+            <iframe class="ps-5 pt-2" src="https://www.google.com/maps/d/u/0/embed?mid=1zMrpd11MKDvt1yL2sNnnGMmre0uNdcw&ehbc=2E312F" width="400" height="400"></iframe>
+          <li class="fs-5">Para enviar tu receta hacé <a href="https://www.whatsapp.com/" target="_blank">click aquí</a></li>
+        </ol>
+      </div>
+      <div class="col-12 col-lg-4 text-start">
+        <h5 class="text-decoration-underline text-center" >Coberturas médicas</h5>
+        <ul>
+          <li class="list-group-item fs-5 text-center">Accord Salud</li>
+          <li class="list-group-item fs-5 text-center">Galeno</li>
+          <li class="list-group-item fs-5 text-center">Medicus</li>
+          <li class="list-group-item fs-5 text-center">Omint</li>
+          <li class="list-group-item fs-5 text-center">Osde</li>
+          <li class="list-group-item fs-5 text-center">Swiss Medical</li>         
+       </ul>
+        <h5 class="text-decoration-underline text-center">Bonos de descuento</h5>
+        <ul>
+          <li class="list-group-item fs-5 text-center">Andrómaco</li>
+          <li class="list-group-item fs-5 text-center">Cassará</li>
+          <li class="list-group-item fs-5 text-center">Fortbenton</li>
+          <li class="list-group-item fs-5 text-center">Panalab</li>
+          <li class="list-group-item fs-5 text-center">PAP</li>
+        </ul>
+      </div>
+    </div>
+    <div class="col-12 col-lg-1"></div>
+    
 </div>    
   </main>
   <footer class="container-fluid text-center">
-    <div class="row row-cols-3">
-      <div class="col pt-4">
-        <h4 class="text-decoration-underline">Ubicación</h4>
-          <p>Av. Corrientes 1801, CABA</p>
+    <div class="row">
+      <div class="col 12 col-lg-4 pt-2">
+        <h5 class="text-decoration-underline pt-2">Ubicación</h5>
+          <p class="pt-2">Av. Corrientes 1801, CABA</p>
           <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3283.9965271887577!2d-58.39455833132518!3d-34.60424932545177!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95bccac198206de7%3A0x31a4c79ffb528624!2sAv.%20Corrientes%20%26%20Av.%20Callao%2C%20C1042%20Buenos%20Aires!5e0!3m2!1ses-419!2sar!4v1707269433509!5m2!1ses-419!2sar" width="200" height="150" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
       </div>
-      <div class="col pt-4">
-        <h4 class="text-decoration-underline ms-1">Contacto</h4>
-        <p>011-5555-1234</p>
-        <p>contacto@farmacianoble.com.ar</p>
+      <div class="col 12 col-lg-4 pt-2">
+        <h5 class="text-decoration-underline ms-1 pt-2">Contacto</h5>
+        <p class="pt-2">011-5555-1234</p>
+        <p class="pt-2">contacto@farmacianoble.com.ar</p>
       </div>
-      <div class="col pt-4">
-        <h4 class="text-decoration-underline ms-1">Seguinos en nuestras redes sociales</h4>
+      <div class="col 12 col-lg-4 pt-2">
+        <h5 class="text-decoration-underline ms-1 pt-2">Seguinos en nuestras redes sociales</h5>
         <span>
-          <a href="https://www.facebook.com/" target="_blank"><i class="icon fa-brands fa-facebook-f fs-3 pe-4"></i></a>
+          <a href="https://www.facebook.com/" target="_blank"><i class="icon fa-brands fa-facebook-f fs-3 pe-4 pt-2"></i></a>
         </span>
         <span>
-          <a href="https://www.instagram.com/" target="_blank"><i class="icon fa-brands fa-instagram fs-3 pe-4"></i></a>
+          <a href="https://www.instagram.com/" target="_blank"><i class="icon fa-brands fa-instagram fs-3 pe-4 pt-2"></i></a>
         </span>
         <span>
-          <a href="https://www.tiktok.com/" target="_blank"><i class="icon fa-brands fa-tiktok fs-3 pe-4"></i></a>
+          <a href="https://www.tiktok.com/" target="_blank"><i class="icon fa-brands fa-tiktok fs-3 pe-4 pt-2"></i></a>
         </span>
         <span>
-          <a href="https://twitter.com/" target="_blank"><i class="icon fa-brands fa-x-twitter fs-3 pe-4"></i></a>
+          <a href="https://twitter.com/" target="_blank"><i class="icon fa-brands fa-x-twitter fs-3 pe-4 pt-2"></i></a>
         </span>
         <span>
-          <a href="https://www.whatsapp.com/" target="_blank"><i class="icon fa-brands fa-whatsapp fs-3 pe-4"></i></a>
+          <a href="https://www.whatsapp.com/" target="_blank"><i class="icon fa-brands fa-whatsapp fs-3 pe-4 pt-2"></i></a>
         </span>
       </div>
     </div>
-    <p>Todos los derechos reservados - 2024</p>
+    <p class="pt-2">Todos los derechos reservados - 2024</p>
   </footer>
-  <script src="../js/bootstrap.bundle.min.js"></script>
+  <script src="./js/bootstrap.bundle.min.js""></script>
+  <script src="./js/bootstrap.bundle.min.js""></script>
 </body>
 </html>
