--- a/pages/noticias.html
+++ b/pages/noticias.html
@@ -13,7 +13,7 @@
   <header class="header position-sticky top-0">
     <nav class="navbar navbar-expand-lg" style="background-color: rgb(184, 217, 252);">
       <div class="container-fluid">
-        <a class="navbar-brand" href="#">
+        <a class="navbar-brand" href="../index.html">
           <img src="../assets/img/logo.svg" alt="Logo Farmacia Noble" width="100" height="48">
         </a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
@@ -30,7 +30,7 @@
                   <a class="nav-link" href="./medicamentos.html">Comprar receta</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link href="./tienda.html">Tienda</a>
+                  <a class="nav-link" href="./tienda.html">Tienda</a>
                 </li>
                 <li class="nav-item">
                   <a class="nav-link active" aria-current="page" href="./noticias.html">Noticias</a>
@@ -45,9 +45,9 @@
     </nav>
   </header>
   <main>
-    <h1 class="text-center pt-2 pb-2 fs-2 fw-bold">Noticias</h1>
-    <div class="d-flex d-inline">
-      <div class="p-2">
+    <h1 class="text-center pt-2 pb-2 fs-2 fw-bold" style="background-color:rgba(126, 205, 15, 0.5)">Noticias</h1>
+    <div class="noticias d-flex d-row justify-content-evenly align-items-center">
+          <div class="p-2">
         <div class="card-body m-3 border border-dark border-2 rounded-bottom shadow p-3">
           <h5 class="card-title fw-bold pt-2 pb-2">Te mostramos cómo elegir la fragancia adecuada para vos</h5>
           <iframe width="350" height="300" src="https://www.youtube.com/embed/e-SXF_Cc5Cs?si=DMUCQBKkhrgUjUwG" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
@@ -56,52 +56,53 @@
       <div class="p-2">
         <div class="card-body m-3 border border-dark border-2 rounded-bottom shadow p-3">
           <h5 class="card-title fw-bold pt-2 pb-2">Medicamentos sin TACC</h5> 
-          <img width="350" height="280" src="../assets/img/Noticias/medicamentos_sin_tacc.jpeg" alt="Imagen medicamentos con el símbolo Sin TACC">
+          <img width="350" height="280" src="../assets/img/noticias/medicamentos_sin_tacc.jpeg" alt="Imagen medicamentos con el símbolo Sin TACC">
           <p class="pt-3"><a href="https://www.colfacor.org.ar/images/capacitacion/alimentos_libres_gluten/ACAmedicamentos_listado.pdf"  target="_blank">Leer más...</a></p> 
         </div>
       </div>
       <div class="p2">
         <div class="card-body m-3 border border-dark border-2 rounded-bottom shadow p-3" >
           <h5 class="card-title fw-bold pt-2 pb-2">¿Qué diferencias hay entre un protector y un bloqueador solar?</h5>
-          <img width="300" height="250" src="../assets/img/Noticias/bloqueadorVsProtector.png" alt="Imagen explicativa de las diferencias entre un bloqueador solar y un protector solar">
+          <img width="300" height="250" src="../assets/img/noticias/bloqueadorVsProtector.png" alt="Imagen explicativa de las diferencias entre un bloqueador solar y un protector solar">
           <p class="pt-3"><a href="https://www.clarin.com/internacional/cuidado-piel-verano-diferencias-protector-bloqueador-solar_0_Ksyf9U9NlA.html" target="_blanck">Leer más...</a></p>            
         </div>
       </div>      
     </div>
    </main>
    <footer class="container-fluid text-center">
-    <div class="row row-cols-3">
-      <div class="col pt-4">
-        <h4 class="text-decoration-underline">Ubicación</h4>
-          <p>Av. Corrientes 1801, CABA</p>
+    <div class="row">
+      <div class="col 12 col-lg-4 pt-2">
+        <h5 class="text-decoration-underline pt-2">Ubicación</h5>
+          <p class="pt-2">Av. Corrientes 1801, CABA</p>
           <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3283.9965271887577!2d-58.39455833132518!3d-34.60424932545177!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95bccac198206de7%3A0x31a4c79ffb528624!2sAv.%20Corrientes%20%26%20Av.%20Callao%2C%20C1042%20Buenos%20Aires!5e0!3m2!1ses-419!2sar!4v1707269433509!5m2!1ses-419!2sar" width="200" height="150" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
       </div>
-      <div class="col pt-4">
-        <h4 class="text-decoration-underline ms-1">Contacto</h4>
-        <p>011-5555-1234</p>
-        <p>contacto@farmacianoble.com.ar</p>
+      <div class="col 12 col-lg-4 pt-2">
+        <h5 class="text-decoration-underline ms-1 pt-2">Contacto</h5>
+        <p class="pt-2">011-5555-1234</p>
+        <p class="pt-2">contacto@farmacianoble.com.ar</p>
       </div>
-      <div class="col pt-4">
-        <h4 class="text-decoration-underline ms-1">Seguinos en nuestras redes sociales</h4>
+      <div class="col 12 col-lg-4 pt-2">
+        <h5 class="text-decoration-underline ms-1 pt-2">Seguinos en nuestras redes sociales</h5>
         <span>
-          <a href="https://www.facebook.com/" target="_blank"><i class="icon fa-brands fa-facebook-f fs-3 pe-4"></i></a>
+          <a href="https://www.facebook.com/" target="_blank"><i class="icon fa-brands fa-facebook-f fs-3 pe-4 pt-2"></i></a>
         </span>
         <span>
-          <a href="https://www.instagram.com/" target="_blank"><i class="icon fa-brands fa-instagram fs-3 pe-4"></i></a>
+          <a href="https://www.instagram.com/" target="_blank"><i class="icon fa-brands fa-instagram fs-3 pe-4 pt-2"></i></a>
         </span>
         <span>
-          <a href="https://www.tiktok.com/" target="_blank"><i class="icon fa-brands fa-tiktok fs-3 pe-4"></i></a>
+          <a href="https://www.tiktok.com/" target="_blank"><i class="icon fa-brands fa-tiktok fs-3 pe-4 pt-2"></i></a>
         </span>
         <span>
-          <a href="https://twitter.com/" target="_blank"><i class="icon fa-brands fa-x-twitter fs-3 pe-4"></i></a>
+          <a href="https://twitter.com/" target="_blank"><i class="icon fa-brands fa-x-twitter fs-3 pe-4 pt-2"></i></a>
         </span>
         <span>
-          <a href="https://www.whatsapp.com/" target="_blank"><i class="icon fa-brands fa-whatsapp fs-3 pe-4"></i></a>
+          <a href="https://www.whatsapp.com/" target="_blank"><i class="icon fa-brands fa-whatsapp fs-3 pe-4 pt-2"></i></a>
         </span>
       </div>
     </div>
-    <p>Todos los derechos reservados - 2024</p>
+    <p class="pt-2">Todos los derechos reservados - 2024</p>
   </footer>
-  <script src="../js/bootstrap.bundle.min.js"></script>
+  <script src="./js/bootstrap.bundle.min.js""></script>
+  <script src="./js/bootstrap.bundle.min.js""></script>
 </body>
 </html>
