--- a/pages/tienda.html
+++ b/pages/tienda.html
@@ -13,7 +13,7 @@
   <header class="header position-sticky top-0">
     <nav class="navbar navbar-expand-lg" style="background-color: rgb(184, 217, 252);">
       <div class="container-fluid">
-        <a class="navbar-brand" href="#">
+        <a class="navbar-brand" href="../index.html">
           <img src="../assets/img/logo.svg" alt="Logo Farmacia Noble" width="100" height="48">
         </a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
@@ -44,14 +44,13 @@
       </div>
     </nav>
   </header>
-
   <main>
-    <h1 class="text-center pt-2 pb-2 fs-2 fw-bold">Tienda</h1>
+    <h1 class="text-center pt-2 pb-2 fs-2 fw-bold" style="background-color:rgba(126, 205, 15, 0.5)">Tienda</h1>
     <p class="fs-5 text-center p-auto" >Estas son las ofertas de esta semana. Podés acceder a nuestro catálogo completo haciendo <a href="https://www.mercadolibre.com.ar/" target="_blank">aquí</a></p>
     <div class="row">
       <div class="col">
         <div class="card">
-          <img src="../assets/img/Productos con descuento/Set_Carolina_Herrera.webp" alt="Imagen del set Girl Blush" class="card-img-top">
+          <img src="../assets/img/productos_con_descuento/Set_Carolina_Herrera.webp" alt="Imagen del set Girl Blush" class="card-img-top w-100">
           <div class="card-body">
             <h5 class="card-title">Set Good Girl Blush Carolina Herrera</h5>
             <p class="priceCard">$180.000</p>
@@ -61,7 +60,7 @@
       </div>
       <div class="col">
         <div class="card">
-          <img src="../assets/img/Productos con descuento/Tommy.webp" alt="Imagen del perfume y el bolso" class="card-img-top">
+          <img src="../assets/img/productos_con_descuento/Tommy.webp" alt="Imagen del perfume y el bolso" class="card-img-top w-100" >
           <div class="card-body">
             <h5 class="card-title">Set Tommy Men Tommy Hilfiger</h5>
             <p class="priceCard">$155.000</p>
@@ -71,7 +70,7 @@
       </div>            
       <div class="col">
         <div class="card">
-          <img  src="../assets/img/Productos con descuento/Fame.webp" alt="Imagen del perfume y el body lotion" class="card-img-top">
+          <img  src="../assets/img/productos_con_descuento/Fame.webp" alt="Imagen del perfume y el body lotion" class="card-img-top w-100">
           <div class="card-body">
             <h5 class="card-title">Set Fame Mujer Paco Rabanne Fame</h5>
             <p class="priceCard">$170.000</p>
@@ -82,7 +81,7 @@
     <div class="row">
       <div class="col">
         <div class="card">
-          <img src="../assets/img/Productos con descuento/Ga-ma_Cepillo_Alisador.webp" alt="Imagen del Cepillo Alisador Ga-ma" class="card-img-top">
+          <img src="../assets/img/productos_con_descuento/Ga-ma_Cepillo_Alisador.webp" alt="Imagen del Cepillo Alisador Ga-ma" class="card-img-top w-100">
           <div class="card-body">
             <h5 class="card-title">Gama Cepillo Alisador De Pelo Modelador Glamour Brush</h5>
             <p class="priceCard">$60.000</p>
@@ -92,7 +91,7 @@
       </div>
       <div class="col">
         <div class="card">
-          <img src="../assets/img/Productos con descuento/Afeitadora_Ga-ma.webp" alt="Imágen de la Afeitadora Gama Italy" class="card-img-top">
+          <img src="../assets/img/productos_con_descuento/Afeitadora_Ga-ma.webp" alt="Imágen de la Afeitadora Gama Italy" class="card-img-top w-100">
           <div class="card-body">
             <h5 class="card-title">Afeitadora Gama Italy BECSH311 Negra</h5>
             <p class="priceCard">$100.000</p>
@@ -102,7 +101,7 @@
       </div>    
       <div class="col">
         <div class="card">
-          <img src="../assets/img/Productos con descuento/Omron.webp" alt="Imagen del tensiómetro Omron de muñeca" class="card-img-top">
+          <img src="../assets/img/productos_con_descuento/Omron.webp" alt="Imagen del tensiómetro Omron de muñeca" class="card-img-top w-100">
           <div class="card-body">
             <h5 class="card-title">Tensiómetro Omron Hem-6123 De Muñeca</h5>
             <p class="priceCard">$55.000</p>
@@ -114,7 +113,7 @@
     <div class="row">
     <div class="col">
       <div class="card">
-        <img src="../assets/img/Productos con descuento/Combo_Dermaglos_Solar.webp" alt="Imagen de los productos del combo Dermaglós" class="card-img-top">
+        <img src="../assets/img/productos_con_descuento/Combo_Dermaglos_Solar.webp" alt="Imagen de los productos del combo Dermaglós" class="card-img-top w-100">
         <div class="card-body">
           <h5 class="sale">Combo Dermaglós Solar</h5>
           <p class="priceCard">$28.000</p>
@@ -124,7 +123,7 @@
     </div>
     <div class="col">
       <div class="card">
-        <img src="../assets/img/Productos con descuento/Combo_Anticaida_Valcatil.webp" alt="Imagen de Cápsulas y Shampoo" class="card-img-top">
+        <img src="../assets/img/productos_con_descuento/Combo_Anticaida_Valcatil.webp" alt="Imagen de Cápsulas y Shampoo" class="card-img-top w-100">
         <div class="card-body">
           <h5 class="sale">Combo Anticaída Valcatil Max</h5>
           <p class="priceCard">$14.000</p>
@@ -134,7 +133,7 @@
     </div>
     <div class="col">
       <div class="card">
-        <img src="../assets/img/Productos con descuento/Curflex_Duo.webp" alt="imagen Curflex Duo" class="card-img-top">
+        <img src="../assets/img/productos_con_descuento/Curflex_Duo.webp" alt="imagen Curflex Duo" class="card-img-top w-100">
         <div class="card-body">
           <h5 class="sale">Curflex Duo x 310 g Sabor Naranja</h5>
           <p class="priceCard">$16.000</p>
@@ -142,41 +141,41 @@
         </div>
       </div>
     </div>
-  </div>         
-        
+  </div>
   </main>
   <footer class="container-fluid text-center">
-    <div class="row row-cols-3">
-      <div class="col pt-4">
-        <h4 class="text-decoration-underline">Ubicación</h4>
-          <p>Av. Corrientes 1801, CABA</p>
+    <div class="row">
+      <div class="col 12 col-lg-4 pt-2">
+        <h5 class="text-decoration-underline pt-2">Ubicación</h5>
+          <p class="pt-2">Av. Corrientes 1801, CABA</p>
           <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3283.9965271887577!2d-58.39455833132518!3d-34.60424932545177!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95bccac198206de7%3A0x31a4c79ffb528624!2sAv.%20Corrientes%20%26%20Av.%20Callao%2C%20C1042%20Buenos%20Aires!5e0!3m2!1ses-419!2sar!4v1707269433509!5m2!1ses-419!2sar" width="200" height="150" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
       </div>
-      <div class="col pt-4">
-        <h4 class="text-decoration-underline ms-1">Contacto</h4>
-        <p>011-5555-1234</p>
-        <p>contacto@farmacianoble.com.ar</p>
+      <div class="col 12 col-lg-4 pt-2">
+        <h5 class="text-decoration-underline ms-1 pt-2">Contacto</h5>
+        <p class="pt-2">011-5555-1234</p>
+        <p class="pt-2">contacto@farmacianoble.com.ar</p>
       </div>
-      <div class="col pt-4">
-        <h4 class="text-decoration-underline ms-1">Seguinos en nuestras redes sociales</h4>
+      <div class="col 12 col-lg-4 pt-2">
+        <h5 class="text-decoration-underline ms-1 pt-2">Seguinos en nuestras redes sociales</h5>
         <span>
-          <a href="https://www.facebook.com/" target="_blank"><i class="icon fa-brands fa-facebook-f fs-3 pe-4"></i></a>
+          <a href="https://www.facebook.com/" target="_blank"><i class="icon fa-brands fa-facebook-f fs-3 pe-4 pt-2"></i></a>
         </span>
         <span>
-          <a href="https://www.instagram.com/" target="_blank"><i class="icon fa-brands fa-instagram fs-3 pe-4"></i></a>
+          <a href="https://www.instagram.com/" target="_blank"><i class="icon fa-brands fa-instagram fs-3 pe-4 pt-2"></i></a>
         </span>
         <span>
-          <a href="https://www.tiktok.com/" target="_blank"><i class="icon fa-brands fa-tiktok fs-3 pe-4"></i></a>
+          <a href="https://www.tiktok.com/" target="_blank"><i class="icon fa-brands fa-tiktok fs-3 pe-4 pt-2"></i></a>
         </span>
         <span>
-          <a href="https://twitter.com/" target="_blank"><i class="icon fa-brands fa-x-twitter fs-3 pe-4"></i></a>
+          <a href="https://twitter.com/" target="_blank"><i class="icon fa-brands fa-x-twitter fs-3 pe-4 pt-2"></i></a>
         </span>
         <span>
-          <a href="https://www.whatsapp.com/" target="_blank"><i class="icon fa-brands fa-whatsapp fs-3 pe-4"></i></a>
+          <a href="https://www.whatsapp.com/" target="_blank"><i class="icon fa-brands fa-whatsapp fs-3 pe-4 pt-2"></i></a>
         </span>
       </div>
     </div>
-    <p>Todos los derechos reservados - 2024</p>
-  </footer>  <script src="../js/bootstrap.bundle.min.js"></script>
+    <p class="pt-2">Todos los derechos reservados - 2024</p>
+  </footer>
+  <script src="./js/bootstrap.bundle.min.js""></script>
 </body>
 </html>
